fix horizontal scroll issue

--- a/public/stylesheets/sass/layout.scss
+++ b/public/stylesheets/sass/layout.scss
@@ -237,7 +237,7 @@ span.rouble span {
       margin: 30px 0 62px 0;
       ul {
         overflow: hidden;
-        width: 200%;
+        width: 100%;
         li {
           display: block;
           float: left; 
